packages/shulker-operator/src/reconcilers/minecraft_cluster/snapshots/shulker_operator__reconcilers__minecraft_cluster__minecraft_server_role_binding__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_cluster/minecraft_server_role_binding.rs
expression: role_binding
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: mincraft-server-rbac
    app.kubernetes.io/instance: role-binding-my-cluster
    app.kubernetes.io/managed-by: shulker-operator
    app.kubernetes.io/name: role-binding
    app.kubernetes.io/part-of: cluster-my-cluster
    minecraftcluster.shulkermc.io/name: my-cluster
  name: "shulker:my-cluster:server"
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: "shulker:my-cluster:server"
subjects:
  - kind: ServiceAccount
    name: shulker-my-cluster-server
    namespace: default

